// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile g huge 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS6 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
      "paddingHorizontal": "10px",
      "paddingVertical": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile g medium 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS6 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile g small 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 30%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 22;
  line-height: 22px;
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS6 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile g wide 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS6 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
      "paddingHorizontal": "10px",
      "paddingVertical": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile g without breakpoint should be like small 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS6 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
      "paddingHorizontal": "10px",
      "paddingVertical": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;
